--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -9,6 +9,13 @@
     <div class="h-screen flex items-center w-full bg-gray-200">
     <div class="container mx-auto border-b border-gray-200 rounded-md shadow">
         <h1 class="text-lg w-full text-center text-gray-600 font-medium">Student - Table</h1>
+        <form method="get" class ="">
+            <input type="text" name="keyword" th:value="${keyword}"/>
+            <input type="submit" value="Search">
+        </form>
+        <form method="get" th:action="@{/students/add/}">
+            <input type="submit" value="Add">
+        </form>
         <table class="w-full text-center">
             <thead class="bg-gray-100">
             <th class="px-6 py-2 text-xs text-gray-500">ID</th>
