--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -1,71 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+layout:decorate="home">
 <head>
     <meta charset="UTF-8">
-    <title>hello</title>
+    <title>Students</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <div class="h-screen flex items-center w-full bg-gray-200">
-    <div class="container mx-auto border-b border-gray-200 rounded-md shadow">
-        <h1 class="text-lg w-full text-center text-gray-600 font-medium">Student - Table</h1>
-        <form method="get" class ="">
-            <input type="text" name="keyword" th:value="${keyword}"/>
-            <input type="submit" value="Search">
-        </form>
-        <form method="get" th:action="@{/students/add/}">
-            <input type="submit" value="Add">
-        </form>
-        <table class="w-full text-center">
-            <thead class="bg-gray-100">
-            <th class="px-6 py-2 text-xs text-gray-500">ID</th>
-            <th class="px-6 py-2 text-xs text-gray-500">First Name</th>
-            <th class="px-6 py-2 text-xs text-gray-500">Last Name</th>
-            <th class="px-6 py-2 text-xs text-gray-500">BirthDay</th>
-            <th class="px-6 py-2 text-xs text-gray-500">Gender</th>
-            <th class="px-6 py-2 text-xs text-gray-500">Email</th>
-            <th class="px-6 py-2 text-xs text-gray-500">Situation</th>
-            <th class="px-6 py-2 text-xs text-gray-500">Edit</th>
-            <th class="px-6 py-2 text-xs text-gray-500">Delete</th>
-            </thead>
-            <tbody class="bg-white divide-y divide-gray-300">
-            <tr class="whitespace-nowrap" th:each="student:${studentList}">
-                <td class="px-6 py-4 text-sm text-gray-500" th:text="${student.id}"></td>
-                <td class="px-6 py-4 text-sm text-gray-500 font-bold"  th:text="${student.firstName}" ></td>
-                <td class="px-6 py-4 text-sm text-gray-500" th:text="${student.lastName}"></td>
-                <td class="px-6 py-4 text-sm text-gray-500"th:text="${student.birthDay}"></td>
-                <td class="px-6 py-4 text-sm text-gray-500" th:text="${student.gender}"></td>
-                <td class="px-6 py-4 text-sm text-gray-500" th:text="${student.Email}"></td>
-                <td class="px-6 py-4 text-sm text-gray-500" th:text="${student.situation}"></td>
+    <section layout:fragment="content" class="mx-auto">
+        <div class="min-w-4xl mx-auto shadow-2xl rounded-md border-b-2 bg-gray-200 border-gray-300 px-4 pb-3">
+            <h1  class="my-2 pt-2 text-xl font-bold w-full text-center text-blue-500">Students - Table</h1>
+            <div class="flex mb-2 justify-between">
+                <form method="get" th:action="@{/students/add/(page=${curentPage},keyword=${keyword})}">
+                    <input class="px-4 py-1 text-white rounded font-bold bg-blue-500" type="submit" value="Add">
+                </form>
+                <form method="get" class ="">
+                    <input class="rounded h-8 px-2" type="text" name="keyword" th:value="${keyword}" placeholder="keyword"/>
+                    <input class="ml-2 px-4 py-1 text-white rounded font-bold bg-blue-500" type="submit" value="Search">
+                </form>
+            </div>
+            <table class="w-full text-center">
+                <thead class="bg-gray-100">
+                <th class="px-6 py-2 text-xs text-gray-500">ID</th>
+                <th class="px-6 py-2 text-xs text-gray-500">First Name</th>
+                <th class="px-6 py-2 text-xs text-gray-500">Last Name</th>
+                <th class="px-6 py-2 text-xs text-gray-500">BirthDay</th>
+                <th class="px-6 py-2 text-xs text-gray-500">Gender</th>
+                <th class="px-6 py-2 text-xs text-gray-500">Email</th>
+                <th class="px-6 py-2 text-xs text-gray-500">Situation</th>
+                <th class="px-6 py-2 text-xs text-gray-500">Edit</th>
+                <th class="px-6 py-2 text-xs text-gray-500">Delete</th>
+                </thead>
+                <tbody class="bg-white divide-y divide-gray-300">
+                <tr class="whitespace-nowrap" th:each="student:${studentList}">
+                    <td class="px-6 py-4 text-sm text-gray-500" th:text="${student.id}"></td>
+                    <td class="px-6 py-4 text-sm text-gray-500 font-bold"  th:text="${student.firstName}" ></td>
+                    <td class="px-6 py-4 text-sm text-gray-500" th:text="${student.lastName}"></td>
+                    <td class="px-6 py-4 text-sm text-gray-500"th:text="${student.birthDay}"></td>
+                    <td class="px-6 py-4 text-sm text-gray-500" th:text="${student.gender}"></td>
+                    <td class="px-6 py-4 text-sm text-gray-500" th:text="${student.Email}"></td>
+                    <td class="px-6 py-4 text-sm text-gray-500" th:text="${student.situation}"></td>
 
-                <td class="px-6 py-4">
-                    <a class="flex justify-center" href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-blue-400" fill="none"
-                             viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                  d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
-                        </svg>
-                    </a>
-                </td>
-                <td class="px-6 py-4">
-                    <a class="flex justify-center" href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-red-400" fill="none"
-                             viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                  d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
-                        </svg>
-                    </a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        <ul class="inline-flex items-baseline">
-            <li class="mx-2" th:each="page,status:${pages}">
-                <a th:href="@{/students/(page=${status.index})}"
-                   th:class="${status.index==curentPage?'bg-gray-700 text-white':'bg-white text-gray-700'}" th:text="${status.index}"></a>
-            </li>
-        </ul>
-    </div>
-</div>
+                    <td class="px-6 py-4">
+                        <a class="flex justify-center" th:href="@{/students/edit/(id=${student.id},keyword=${keyword},page=${curentPage})}">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-blue-400" fill="none"
+                                 viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                      d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
+                            </svg>
+                        </a>
+                    </td>
+                    <td class="px-6 py-4">
+                        <a onclick="return confirm('Are u Sure !')" class="flex justify-center" th:href="@{/students/delete/(id=${student.id},keyword=${keyword},page=${curentPage})}">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-red-400" fill="none"
+                                 viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                      d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                            </svg>
+                        </a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <ul class="h-full items-baseline">
+                <li class="mt-3 inline-flex"  th:each="page,status:${pages}">
+                    <a class="mr-2 py-2 px-6 rounded" th:classappend="${status.index==curentPage?'bg-blue-500 text-white':'bg-white text-gray-700'}" th:href="@{/students/(page=${status.index},keyword=${keyword})}"
+                       th:text="${status.index} + 1"></a>
+                </li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
