--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,24 +4,24 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <tit<form class="mr-2" method="post" action="@{/logout/}">
-                        <input type="submit">logout</input>
-                    </form>le>Students</title>
+    <title>Students</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <div class="h-screen relative min-w-min flex items-center w-full bg-gray-100 px-4">
         <div class="h-12 w-full shadow-xl flex justify-between bg-blue-500 absolute top-0 left-0 px-8">
             <p class="text-white my-auto font-bold">Student Mangement</p>
-            <ul class="flex my-auto text-white">
-                <li class="mr-2" sec:authorize="!isAuthenticated()">login</li>
-                <li  sec:authorize="isAuthenticated()">
-                    <form class="mr-2" method="post" th:action="@{/logout}">
-                        <input type="submit">logout</input>
-                    </form>
-                </li>
-                <li>register</li>
-            </ul>
+            <div class="flex my-auto text-white">
+                <form sec:authorize="isAuthenticated()" class="mr-2" method="post" th:action="@{/logout}">
+                    <input type="submit" value="logout"/>
+                </form>
+                <form sec:authorize="!isAuthenticated()" class="mr-2" method="post" th:action="@{/login}">
+                    <input type="submit" value="login"/>
+                </form>
+                <form sec:authorize="!isAuthenticated()" class="mr-2" method="post" th:action="@{/register}">
+                    <input type="submit" value="register"/>
+                </form>
+            </div>
         </div>
         <section layout:fragment="content">
 
