--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,31 +1,20 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      layout:decorate="template">
 <head>
     <meta charset="UTF-8">
     <title>Students</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div class="h-screen relative min-w-min flex items-center w-full bg-gray-100 px-4">
-        <div class="h-12 w-full shadow-xl flex justify-between bg-blue-500 absolute top-0 left-0 px-8">
-            <p class="text-white my-auto font-bold">Student Mangement</p>
-            <div class="flex my-auto text-white">
-                <form sec:authorize="isAuthenticated()" class="mr-2" method="post" th:action="@{/logout}">
-                    <input type="submit" value="logout"/>
-                </form>
-                <form sec:authorize="!isAuthenticated()" class="mr-2" method="post" th:action="@{/login}">
-                    <input type="submit" value="login"/>
-                </form>
-                <form sec:authorize="!isAuthenticated()" class="mr-2" method="post" th:action="@{/register}">
-                    <input type="submit" value="register"/>
-                </form>
-            </div>
+<body class="bg-white">
+    <section layout:fragment="content"class="w-full flex justify-between mx-12">
+        <div class="my-auto mx-auto">
+           <h1 class="text-4xl text-blue-500 font-bold text-center">Welcome TO <br/>Student Manager</h1>
         </div>
-        <section layout:fragment="content">
-
-        </section>
-    </div>
+        <image class="w-2/4 h-2/4" th:src="@{/images/image.png}"/>
+    </section>
 </body>
 </html>
