--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-layout:decorate="home">
+layout:decorate="template">
 <head>
     <meta charset="UTF-8">
     <title>Students</title>
