--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,7 +11,7 @@
 <body>
    <section layout:fragment="content" class="mx-auto">
 
-       <form class="bg-white px-12 pb-12 pt-4 rounded shadow-xl" autocomplete="off">
+       <form class="bg-white px-12 pb-12 pt-4 rounded shadow-xl" autocomplete="off" th:action="@{/users/(page=${curentPage},keyword=${keyword})}">
            <h1 class="w-full text-xl text-center font-bold text-blue-500 mb-2">Registration</h1>
            <div class="mb-2">
                <label class="block text-blue-500 mb-2 font-bold ">Email</label>
