--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -11,12 +11,16 @@
 <div class="h-screen relative min-w-min flex items-center w-full bg-gray-100 px-4">
   <div class="h-12 w-full shadow-xl flex justify-between bg-blue-500 absolute top-0 left-0 px-8">
     <p class="text-white my-auto font-bold">Student Mangement</p>
+    <div class="flex-1 flex justify-center" sec:authorize="hasAnyAuthority('ADMIN')">
+      <form sec:authorize="isAuthenticated()" method="get" th:action="@{/students}" class="flex flex-col w-24 ml-4 hover:border-b-4 hover:border-b-[#3F3C51]">
+        <input class="cursor-pointer grow text-[#3F3C51] font-semibold" type="submit" value="Student"/>
+      </form>
+      <form sec:authorize="isAuthenticated()" method="get" th:action="@{/users}" class="flex w-24 ml-4 hover:border-b-4 hover:border-b-[#3F3C51]">
+        <input class="cursor-pointer grow text-[#3F3C51] font-semibold" type="submit" value="Users"/>
+        <!--<div class="hover:bg-white flex-none h-2 w-full bg-[#3F3C51]"></div>-->
+      </form>
+    </div>
     <div class="flex my-auto text-white">
-      <button onclick="changeMode()" class="mr-4">
-        <svg  xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
-        </svg>
-      </button>
       <form class="border border-white mr-2 cursor-pointer rounded px-3 py-1 mr-2"  sec:authorize="isAuthenticated()" method="post" th:action="@{/logout}">
         <input class="cursor-pointer" type="submit" value="logout"/>
       </form>
@@ -32,11 +36,5 @@
 
   </section>
 </div>
-<script>
-  var mode = true;
-  function changeMode() {
-    mode =!mode;
-  }
-</script>
 </body>
 </html>
